# arestat

./: Cargo.toml
src/: cli.rs  lib.rs  main.rs  reqs.rs  stats.rs
test_data/: test_requests.http
